--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "menshilauncher",
-  "version": "1.0.0",
+  "version": "1.0.1-0",
   "productName": "MenshiLauncher",
   "description": "メンバーシップ用Minecraftランチャー",
   "author": "Daniel Scalzi (https://github.com/dscalzi/), TeamKUN (https://github.com/TeamKun/)",
